--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.havok.physics": "1.0.0-pre.44",
     "com.unity.charactercontroller": "1.0.0-exp.2",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.0",
